add R_ignore_SIGPIPE and use it in Rhttpd (fixes PR#14266)
git-svn-id: https://svn.r-project.org/R/trunk@51805 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -176,6 +176,9 @@ BUG FIXES
     o	splinefun(*, method = "monoH.FC")  was not quite monotone in rare
 	cases.	(PR#14215)
 
+    o	Rhttpd no longer crashes due to SIGPIPE when the client closes
+	the connection prematurely.  (PR#14266)
+
 
 
 		CHANGES IN R VERSION 2.11.0
