--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2524,8 +2524,7 @@ or @option{--with-system-pcre}: otherwise versions in the @R{} sources
 will be compiled in.  As the latter suffice and are tested with @R{} you
 should not need to change this.  In particular, the version of
 @code{zlib} 1.2.3 in the @R{} sources has enhancements to work with
-large file systems on 32-bit platforms, and @code{zlib} 1.2.4 is not
-currently compatible with @R{}.
+large file systems on 32-bit platforms.
 
 @code{liblzma} from @code{xz-utils} version 4.999 or later will be used
 if installed: the version in the @R{} sources can be selected instead by
@@ -4308,8 +4307,7 @@ Only building with MinGW @command{gcc 4.2.1} is supported.  It is
 possible to build with the recently released MinGW @command{gcc 4.5.0},
 but this came too late to be supported for this release of @R{}---beware
 that this by default uses DLLs for runtimes which need to be distributed
-with @R{} or packages built with that compiler.  There are also
-differences in the behaviour of @code{formatC} with later MinGW runtimes.
+with @R{} or packages built with that compiler.
 
 We have found that the build process for @R{} is quite sensitive to
 the choice of tools: please follow our instructions @strong{exactly},
@@ -4494,34 +4492,9 @@ from the URL above, as the download links from
 @uref{http://www.mingw.org/} have led to obsolete versions. See the
 notes on @uref{http://www.murdoch-sutherland.com/@/Rtools/} for updates.
 
-@c There may be an installer in the `Current' section, which can be used
-@c if it gives the @samp{Candidate} compilers (@code{gcc-3.4.5}).  (If
-@c using this, select the @samp{Candidate} package and add the @code{g++}
-@c and @code{g77} compilers to the @samp{MinGW base tools}: components will
-@c be downloaded from Sourceforge and unpacked.)
+See above for comments about the MinGW build of @code{gcc-4.5.0} from
+April 2010.
 
-To download the components individually, currently you need
-
-@example
-mingw-runtime-3.13.tar.gz
-w32api-3.10.tar.gz
-binutils-2.17.50-20060824-1.tar.gz  
-gcc-core-4.2.1-sjlj-2.tar.gz
-gcc-g++-4.2.1-sjlj-2.tar.gz
-gcc-gfortran-4.2.1-sjlj-2.tar.gz
-@end example
-
-@noindent
-(and @code{gcc-objc-4.2.1-sjlj-2.tar.gz} if you want Objective C
-support).  Unpack these into the same directory (using @command{tar zxf
-tarball_name}).  (You may need to copy @file{bin/gcc-sjlj.exe} to
-@file{bin/gcc.exe} and a few badly-written packages need
-@file{bin/g++-sjlj.exe} copied to @file{bin/g++.exe}.)  This compiler
-should work on Windows Vista without any workarounds.
-
-Note that @code{mingw-runtime-3.13.tar.gz} or later (but not as late as
-@code{3.18}) and @code{gcc-4.2.1} or later are needed to get a correct
-build of @R{} itself.
 
 @node Useful additional programs,  , The MinGW compilers, The Windows toolset
 @section Useful additional programs
