Fix for PR#14267.  (This only affects the 2.11 branch, not the trunk.)
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51811 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -32,6 +32,9 @@ BUG FIXES
 
     o	Rhttpd no longer crashes due to SIGPIPE when the client closes
 	the connection prematurely.  (PR#14266)
+	
+    o	format.POSIXlt() could cause a stack overflow and crash when used on
+    	very long vectors.  (PR#14267)
 
 
 
