port r51814 (merge startups, add (64-bit) to titles)
git-svn-id: https://svn.r-project.org/R/trunk@51815 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -74,6 +74,19 @@ PACKAGE INSTALLATION
 	**************************************************
 
 
+    		CHANGES IN R VERSION 2.11.0 patched
+
+
+NEW FEATURES
+
+    o	The Rgui console, pagers and editor on the 64-bit build now have
+	a title bar icon.
+
+    o	The outer frame/console for RGui/Rterm  mention '(64-bit)' to
+	make it easier to distinguish running copies of R.
+
+
+
     		CHANGES IN R VERSION 2.11.0
 
 
