--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -85,6 +85,10 @@ NEW FEATURES
     o	The outer frame/console for RGui/Rterm  mention '(64-bit)' to
 	make it easier to distinguish running copies of R.
 
+    o	The package entries in the 'Install package(s) ...' menu are
+	now explicitly sorted in the current locale (there were in
+	most previous releases, but not in 2.11.0).
+
 
 
     		CHANGES IN R VERSION 2.11.0
